--- a/.github/workflows/flutter_firebase_ci.yml
+++ b/.github/workflows/flutter_firebase_ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Decode Keystore File
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/my-release-key.jks
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
 
       - name: Set Up Android Key Properties
         run: |
