--- a/.github/workflows/flutter_firebase_ci.yml
+++ b/.github/workflows/flutter_firebase_ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Set Up Android Key Properties
         run: |
-          echo "storeFile=${{ secrets.KEYSTORE_PATH }}" >> android/key.properties
+          echo "storeFile=keystore.jks" > android/key.properties
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
